--- a/src/layout/header/styles.css
+++ b/src/layout/header/styles.css
@@ -25,6 +25,7 @@
   top: 5%;
   transform: translateY(-50%);
 }
+
 nav.navbar {
   padding: 10px 0;
   position: fixed;
@@ -32,7 +33,7 @@ nav.navbar {
   top: 0;
   transition: 0.32s ease-in-out;
 }
+
 nav.navbar.scrolled {
-  padding: 20px 0;
   background-color: white;
 }
